# computer-vision

./: .gitignore  flake.nix  pyproject.toml
examples/: cifar10.py
examples/cifar10/: model.py  train.py  utils.py
src/transformer/: __init__.py  block.py
src/transformer/model/: __init__.py  encoder.py
src/transformer/modules/: __init__.py  attention.py  batch.py  block.py  downsampling.py  droppath.py  feedforward.py  layers.py  merge.py  normalisation.py  positionalencoding.py  shift.py  utils.py  windows.py
src/transformer/utils/: __init__.py  dimension.py
